--- a/package.json
+++ b/package.json
@@ -5,21 +5,23 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~54.0.31",
+    "expo-camera": "~17.0.10",
+    "expo-file-system": "~19.0.21",
     "expo-linear-gradient": "^15.0.8",
     "expo-location": "~19.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-task-manager": "~14.0.9",
-    "firebase": "^12.7.0",
+    "firebase": "^12.8.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-webview": "^13.16.0"
+    "react-native-webview": "13.15.0"
   },
   "private": true,
   "devDependencies": {
